@@ -85,4 +85,5 @@ dist-nsis: html-local
 	$(WINEXEC) lib.exe /machine:x86 /def:_nsis/lib/libzbar-0.def /out:_nsis/lib/libzbar-0.lib
 	cd _nsis && \
 	  makensis -NOCD -V2 -DVERSION=$(VERSION) $(abs_srcdir)/zbar.nsi
+	@ls -l _nsis/zbar-$(VERSION)-setup.exe
 endif
