@@ -1,15 +1,16 @@
 ZBAR BAR CODE READER
 ====================
 
-ZBar Bar Code Reader is a library for scanning and decoding bar codes
-from various sources such as video streams, image files or raw intensity
-sensors.  It supports EAN/UPC, Code 128, Code 39 and Interleaved 2 of 5.
-Included with the library are basic applications for decoding captured
-bar code images and using a video device (eg, webcam) as a bar code
-scanner.  For application developers, language bindings are included for
-C, C++, Python and Perl as well as GUI widgets for Qt, GTK and PyGTK.
+ZBar Bar Code Reader is an open source software suite for reading bar
+codes from various sources, such as video streams, image files and raw
+intensity sensors. It supports EAN-13/UPC-A, UPC-E, EAN-8, Code 128,
+Code 39, Interleaved 2 of 5 and QR Code.  Included with the library
+are basic applications for decoding captured bar code images and using
+a video device (eg, webcam) as a bar code scanner.  For application
+developers, language bindings are included for C, C++, Python and Perl
+as well as GUI widgets for Qt, GTK and PyGTK.
 
-Check the zbar home page for the latest release, mailing lists, etc.
+Check the ZBar home page for the latest release, mailing lists, etc.
     http://zbar.sourceforge.net/
 
 License information can be found in 'COPYING'.
